; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_draw.c_PicoDrawSync.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_draw.c_PicoDrawSync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32* }

@Pico = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@draw = common dso_local global i32 0, align 4
@rendlines = common dso_local global i32 0, align 4
@DrawScanline = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PicoDrawSync(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %6, align 4
  %9 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @Pico, i32 0, i32 0, i32 0), align 8
  %10 = getelementptr inbounds i32, i32* %9, i64 12
  %11 = load i32, i32* %10, align 4
  %12 = and i32 %11, 8
  %13 = ashr i32 %12, 3
  store i32 %13, i32* %7, align 4
  %14 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @Pico, i32 0, i32 0, i32 0), align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 7
  %16 = load i32, i32* %15, align 4
  store i32 %16, i32* %8, align 4
  %17 = load i32, i32* @draw, align 4
  %18 = call i32 @pprof_start(i32 %17)
  %19 = load i32, i32* @rendlines, align 4
  %20 = icmp ne i32 %19, 240
  br i1 %20, label %21, label %22

21:                                               ; preds = %2
  store i32 8, i32* %6, align 4
  br label %22

22:                                               ; preds = %21, %2
  %23 = load i32, i32* @DrawScanline, align 4
  store i32 %23, i32* %5, align 4
  br label %24

24:                                               ; preds = %34, %22
  %25 = load i32, i32* %5, align 4
  %26 = load i32, i32* %3, align 4
  %27 = icmp slt i32 %25, %26
  br i1 %27, label %28, label %37

28:                                               ; preds = %24
  %29 = load i32, i32* %5, align 4
  %30 = load i32, i32* %6, align 4
  %31 = load i32, i32* %7, align 4
  %32 = load i32, i32* %8, align 4
  %33 = call i32 @PicoLine(i32 %29, i32 %30, i32 %31, i32 %32)
  br label %34

34:                                               ; preds = %28
  %35 = load i32, i32* %5, align 4
  %36 = add nsw i32 %35, 1
  store i32 %36, i32* %5, align 4
  br label %24

37:                                               ; preds = %24
  %38 = load i32, i32* %5, align 4
  %39 = load i32, i32* %3, align 4
  %40 = icmp sle i32 %38, %39
  br i1 %40, label %41, label %59

41:                                               ; preds = %37
  %42 = load i32, i32* %4, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %50

44:                                               ; preds = %41
  %45 = load i32, i32* %5, align 4
  %46 = load i32, i32* %6, align 4
  %47 = load i32, i32* %7, align 4
  %48 = load i32, i32* %8, align 4
  %49 = call i32 @DrawBlankedLine(i32 %45, i32 %46, i32 %47, i32 %48)
  br label %56

50:                                               ; preds = %41
  %51 = load i32, i32* %5, align 4
  %52 = load i32, i32* %6, align 4
  %53 = load i32, i32* %7, align 4
  %54 = load i32, i32* %8, align 4
  %55 = call i32 @PicoLine(i32 %51, i32 %52, i32 %53, i32 %54)
  br label %56

56:                                               ; preds = %50, %44
  %57 = load i32, i32* %5, align 4
  %58 = add nsw i32 %57, 1
  store i32 %58, i32* %5, align 4
  br label %59

59:                                               ; preds = %56, %37
  %60 = load i32, i32* %5, align 4
  store i32 %60, i32* @DrawScanline, align 4
  %61 = load i32, i32* @draw, align 4
  %62 = call i32 @pprof_end(i32 %61)
  ret void
}

declare dso_local i32 @pprof_start(i32) #1

declare dso_local i32 @PicoLine(i32, i32, i32, i32) #1

declare dso_local i32 @DrawBlankedLine(i32, i32, i32, i32) #1

declare dso_local i32 @pprof_end(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
